section offer done, no media

--- a/src/assets/sass/blocks/news/_news.scss
+++ b/src/assets/sass/blocks/news/_news.scss
@@ -34,7 +34,7 @@
         }
         &-contents {
             width: 770px;
-            background-color: rgba(#00868a, .1);
+            background-color: rgba($secondary-color, .1);
         }
         &-content {
             display: none;
