--- a/src/assets/sass/blocks/header/_header.scss
+++ b/src/assets/sass/blocks/header/_header.scss
@@ -92,7 +92,7 @@
         justify-content: center;
         align-items: center;
         height: 40px;
-        padding: 12px 15px;
+        padding: 0 15px;
         color: #fff;
         font-weight: 500;
         text-transform: uppercase;
