--- a/src/assets/sass/blocks/innovation/_innovation.scss
+++ b/src/assets/sass/blocks/innovation/_innovation.scss
@@ -12,6 +12,9 @@
         justify-content: center;
         align-items: flex-start;
         background-color: $secondary-color;
+        @media(max-width: 1399px) {
+            width: 380px;
+        }
         &-content {
             padding: 35px 0 0 40px;
         }
@@ -26,6 +29,12 @@
             color: #fff;
             line-height: 40px;
             margin-top: 30px;
+            span {
+                font-size: 30px;
+                @media(max-width: 1399px) {
+                    font-size: 20px;
+                }
+            }
         }
         &-details {
             display: flex;
@@ -86,9 +95,13 @@
             }
             strong {
                 text-transform: uppercase;
+                font-size: 16px;
                 color: #fff;
                 margin-left: 20px;
                 cursor: pointer;
+                @media(max-width: 1399px) {
+                    font-size: 14px;
+                }
             }
         }
         &-img {
@@ -105,6 +118,9 @@
     &__patent {
         width: 636px;
         padding-top: 35px;
+        @media(max-width: 1399px) {
+            width: 515px;
+        }
         &-wrapper {
             display: flex;
             justify-content: center;
