--- a/src/assets/sass/blocks/intro/_intro.scss
+++ b/src/assets/sass/blocks/intro/_intro.scss
@@ -34,17 +34,41 @@
                     background-color: $secondary-color;
                     text-transform: uppercase;
                     color: #fff;
+                    font-size: 18px;
                     padding: 13px 25px;
-                    margin-top: 40px;
+                    margin: 40px 0 0 0;
                     border: none;
                     cursor: pointer;
+                    @media(max-width: 1399px) {
+                        display: block;
+                        font-size: 14px;
+                        margin: 40px auto 0 auto;
+                    }
                     &:hover {
                         background-color: darken($secondary-color, 5%);
+                    }
+                }
+                &-title {
+                    font-size: 48px;
+                    @media(max-width: 1399px) {
+                        font-size: 34px;
+                        text-align: center;
+                    }
+                }
+                &-content {
+                    @media(max-width: 1399px) {
+                        text-align: center;
                     }
                 }
             }
             &-image {
                 display: flex;
+                width: 70%;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
             }
         }
     }
