--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -28,3 +28,13 @@ body {
         max-width: 960px;
     }
 }
+@media(max-width: 991px) {
+    .container {
+        max-width: 768px;
+    }             
+}
+@media(max-width: 767px) {
+    .container {
+        max-width: 576px;
+    }             
+}
