--- a/src/assets/sass/blocks/contacts/_contacts.scss
+++ b/src/assets/sass/blocks/contacts/_contacts.scss
@@ -1,9 +1,15 @@
 .contacts {
     padding-top: 100px;
+    @media(max-width: 991px) {
+        padding-top: 50px;            
+    }
     &__wrapper {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
+        @media(max-width: 991px) {
+            padding: 0 10px;            
+        }
     }
     &__links {
         display: flex;
@@ -14,19 +20,38 @@
         @media(max-width: 1399px) {
             justify-content: center;
         }
+        @media(max-width: 991px) {
+            width: calc(75% - 15px);             
+        }
+        @media(max-width: 767px) {
+            width: calc(70% - 15px);
+        }
     }
     &__link {
         margin-right: 190px;
         margin-bottom: 30px;
-        @media(max-width: 1399px) {
-            margin-right: 30px;
-        }
         &:nth-child(3n+3) {
             margin-right: 10px;
         }
+        @media(max-width: 1399px) {
+            margin-right: 30px;
+        }
+        @media(max-width: 767px) {
+            margin-right: 0;
+            &:nth-child(3n+3) {
+                margin-right: 0;
+            }
+            &:nth-child(2n + 1) {
+                margin-right: 20px;
+            }
+        }
+        
         &-title {
             font-size: 21px;
             margin: 0;
+            @media(max-width: 991px) {
+                font-size: 18px;             
+            }
         }
         &-wrapper {
             margin-top: 20px;
@@ -50,6 +75,12 @@
     &__address {
         width: calc(25% - 25px);
         margin-top: 10px;
+        @media(max-width: 991px) {
+            width: calc(25% - 15px);            
+        }
+        @media(max-width: 767px) {
+            width: calc(30% - 15px);
+        }
         &-item {
             display: flex;
             flex-direction: column;
@@ -66,6 +97,12 @@
             strong {
                 font-size: 21px;
                 margin-top: 10px;
+                @media(max-width: 1399px) {
+                    font-size: 18px;
+                }
+                @media(max-width: 991px) {
+                    font-size: 15px;             
+                }
             }
             button {
                 background-color: $secondary-color;
@@ -76,6 +113,10 @@
                 padding: 12px 25px;
                 color: #fff;
                 cursor: pointer;
+                @media(max-width: 991px) {
+                    font-size: 12px;
+                    padding: 12px 20px;            
+                }
                 &:hover {
                     background-color: darken($secondary-color, 10%);
                 }
