--- a/src/assets/sass/blocks/intro/_intro.scss
+++ b/src/assets/sass/blocks/intro/_intro.scss
@@ -5,6 +5,15 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+        font-size: 18px;
+        text-align: center;
+        @media(max-width: 991px) {
+            text-align: center;
+            font-size: 14px;
+        }
+        @media(max-width: 767px) {
+            font-size: 12px;            
+        }
     }
     &__link {
         text-decoration: none;
@@ -30,6 +39,9 @@
             &-text {
                 width: 30%;
                 color: #fff;
+                @media(max-width: 767px) {
+                    width: 50%;           
+                }
                 &-btn {
                     background-color: $secondary-color;
                     text-transform: uppercase;
@@ -44,6 +56,12 @@
                         font-size: 14px;
                         margin: 40px auto 0 auto;
                     }
+                    @media(max-width: 991px) {
+                        font-size: 12px;
+                    }
+                    @media(max-width: 767px) {
+                       margin: 15px auto 0 auto;            
+                    }
                     &:hover {
                         background-color: darken($secondary-color, 5%);
                     }
@@ -54,16 +72,34 @@
                         font-size: 34px;
                         text-align: center;
                     }
+                    @media(max-width: 991px) {
+                        font-size: 26px;
+                    }
+                    @media(max-width: 767px) {
+                        font-size: 17px;
+                        margin: 0 0 5px 0;            
+                    }
                 }
                 &-content {
+                    font-size: 14px;
+                    line-height: 21px;
                     @media(max-width: 1399px) {
                         text-align: center;
+                    }
+                    @media(max-width: 991px) {
+                        padding: 5px;
+                    }
+                    @media(max-width: 767px) {
+                        font-size: 12px;            
                     }
                 }
             }
             &-image {
                 display: flex;
                 width: 70%;
+                @media(max-width: 767px) {
+                    width: 50%;            
+                }
                 img {
                     width: 100%;
                     height: 100%;
@@ -83,10 +119,17 @@
     &__tab-item {
         flex-grow: 1;
         text-align: center;
+        font-size: 21px;
         color: #fff;
         padding: 24px 0;
         background-color: $secondary-color;
         cursor: pointer;
+        @media(max-width: 991px) {
+            font-size: 18px;           
+        }
+        @media(max-width: 767px) {
+            font-size: 16px;            
+        }
         &:first-child {
             flex-grow: 2;
         }
