--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -38,3 +38,8 @@ body {
         max-width: 576px;
     }             
 }
+@media(max-width: 575px) {
+    .container {
+        max-width: 100%;
+    }             
+}
