--- a/src/assets/sass/blocks/footer/_footer.scss
+++ b/src/assets/sass/blocks/footer/_footer.scss
@@ -3,6 +3,9 @@
     @media(max-width: 1399px) {
         padding: 0 15px 15px 15px;
     }
+    @media(max-width: 575px) {
+        margin-top: 40px;      
+    }
     &__wrapper {
         display: flex;
         justify-content: space-between;
@@ -16,6 +19,20 @@
         width: 25%;
         @media(max-width: 991px) {
             width: 30%;            
+        }
+        @media(max-width: 767px) {
+            width: 40%;
+            &:nth-child(-n + 2) {
+                margin-bottom: 20px;
+            }
+        }
+        @media(max-width: 575px) {
+            &:nth-child(3) {
+                display: none;
+            }   
+            &:last-child {
+                width: 70%;
+            }   
         }
         &-socials {
             display: flex;
@@ -51,6 +68,9 @@
             }
             @media(max-width: 991px) {
                 padding: 0 8px;            
+            }
+            @media(max-width: 767px) {
+                padding: 7px;
             }
             &:hover {
                 background-color: darken($secondary-color, 5%);
