--- a/src/assets/sass/blocks/innovation/_innovation.scss
+++ b/src/assets/sass/blocks/innovation/_innovation.scss
@@ -7,6 +7,9 @@
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
+        @media(max-width: 575px) {
+            flex-wrap: wrap;           
+        }
     }
     &__course {
         width: 526px;
@@ -23,6 +26,9 @@
         }
         @media(max-width: 767px) {
             width: 240px;            
+        }
+        @media(max-width: 575px) {
+            width: 100%;           
         }
         &-content {
             padding: 35px 0 0 40px;
@@ -163,6 +169,9 @@
             width: 336px;
             padding-left: 20px;            
         }
+        @media(max-width: 575px) {
+            width: 100%;           
+        }
         &-head {
             span {
                 padding: 10px 15px;
@@ -179,10 +188,16 @@
             @media(max-width: 767px) {
                 margin-top: 25px;            
             }
+            @media(max-width: 575px) {
+                margin-top: 10px;           
+            }
         }
         &-amount {
             @media(max-width: 767px) {
                 margin-top: 40px;             
+            }
+            @media(max-width: 575px) {
+                margin-top: 20px;           
             }
             &__item {
                 display: flex;
@@ -226,6 +241,9 @@
                         @media(max-width: 767px) {
                             font-size: 17px;
                             line-height: 25px;             
+                        }
+                        @media(max-width: 575px) {
+                            font-size: 16px;           
                         }
                     }
                 }
