--- a/src/assets/sass/blocks/intro/_intro.scss
+++ b/src/assets/sass/blocks/intro/_intro.scss
@@ -14,6 +14,10 @@
         @media(max-width: 767px) {
             font-size: 12px;            
         }
+        @media(max-width: 575px) {
+            justify-content: center;
+            flex-wrap: wrap;           
+        }
     }
     &__link {
         text-decoration: none;
@@ -23,6 +27,9 @@
         &:hover, &:focus {
             color: #000;
             background-color: #fff;
+        }
+        @media(max-width: 767px) {
+            padding: 10px 10px;
         }
     }
     &__tab-content {
@@ -36,11 +43,17 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            @media(max-width: 575px) {
+                flex-direction: column;           
+            }
             &-text {
                 width: 30%;
                 color: #fff;
                 @media(max-width: 767px) {
                     width: 50%;           
+                }
+                @media(max-width: 575px) {
+                    width: 100%;           
                 }
                 &-btn {
                     background-color: $secondary-color;
@@ -100,6 +113,9 @@
                 @media(max-width: 767px) {
                     width: 50%;            
                 }
+                @media(max-width: 575px) {
+                    width: 100%;           
+                }
                 img {
                     width: 100%;
                     height: 100%;
@@ -129,6 +145,31 @@
         }
         @media(max-width: 767px) {
             font-size: 16px;            
+        }
+        @media(max-width: 575px) {
+            width: calc(100% / 3);
+            display: flex;
+            justify-content: center;
+            align-items: center; 
+            &:first-child {
+                padding: 33px 0;
+            } 
+            &:nth-child(2) {
+                padding: 33px 0;
+            }  
+            &:last-child {
+                padding: 33px 0;
+            }       
+        }
+        @media(max-width: 566px) {
+            &:first-child {
+                padding: 24px 0;
+            }       
+        }
+        @media(max-width: 361px) {
+            &:nth-child(2) {
+                padding: 24px 0;
+            }       
         }
         &:first-child {
             flex-grow: 2;
