--- a/src/assets/sass/blocks/offer/_offer.scss
+++ b/src/assets/sass/blocks/offer/_offer.scss
@@ -28,10 +28,13 @@
     }
     &__items {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: flex-start;
         flex-wrap: wrap;
         margin-top: 60px;
+        @media(max-width: 1399px) {
+            justify-content: center;
+        }
         @media(max-width: 767px) {
             margin-top: 40px;
         }
