--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,4 +1,6 @@
 @import 'components/variables/variables';
+@import 'components/animation/animation.scss';
+
 @import 'components/mixins/mixins';
 @import 'blocks/contacts/contacts';
 @import 'blocks/footer/footer';
