--- a/src/assets/sass/blocks/innovation/_innovation.scss
+++ b/src/assets/sass/blocks/innovation/_innovation.scss
@@ -67,6 +67,7 @@
             display: flex;
             align-items: center;
             margin-top: 25px;
+            text-decoration: none;
             @media(max-width: 767px) {
                 margin-top: 20px;            
             }
