--- a/src/assets/sass/blocks/offer/_offer.scss
+++ b/src/assets/sass/blocks/offer/_offer.scss
@@ -85,7 +85,7 @@
                 align-items: center;
                 background-color: $secondary-color;
                 padding: 25px 30px;
-                
+                text-decoration: none;
                 &:hover{
                     .offer__items-elem-details__btn {
                         border-color: darken(#fff, 30%);
